--- a/projects/stayawhile-dash/index.html
+++ b/projects/stayawhile-dash/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <head>
-<title>Arithmatic</title>
+<title>Stayawhile Internal Dashboard</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
@@ -13,6 +13,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
   <script src="http://circletype.labwire.ca/js/circletype.js"></script>
+  <script type="text/javascript" src="/js/lib/flickity.pkgd.min.js"></script>
+  <link type="text/css" rel="stylesheet" href="/css/lib/flickity.min.css">
   <style type="text/css">
   body{
     background-color: white;
@@ -153,7 +155,7 @@
 <p>This requires an enormous amount of work from several key people, both in the office and on the field, so responsiveness was key. In seeing the master list of properties and furniture, a table view is the most appropriate way to display this content. The problem with tables is that they're not responsive, so I designed and coded a tabular UI system that on larger devices displays as a table but condenses into a card on smaller devices, the result being totally responsive tables.</p>
 <!-- RESPONSIVE TABLES GIF -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- RESPONSIVE TABLES GIF -->
 <p>To set up these units, tasks need to be completed. Collaborating with the team, I identified the three core task interactions:</p>
   <ol>
@@ -164,26 +166,26 @@ https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/home
 <p>For the actual process of setting up units, tasks don't need to be completed in some chronological order, but some tasks require another task to be completed. The solution was nested tasking, similar to nested comment threads in platforms like Reddit. Tasks also have a designated person-in-charge, an ETA for completion and a color key noting how critical it is to complete.</p>
 <!-- TASKS IMAGE -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- TASKS IMAGE -->
 <p>In setting up a unit, there are multiple roadmaps with different corresponding teams. In Excel, multiple spreadsheets are separated by a fixed set of tabs at the bottom of a document. I borrowed this UI convention for the dashboard due to the team's familiarity with Excel, but Excel's approach lacks the responsiveness we need. My solution to build out a fixed bottom 'dropup' menu.</p>
 <!-- GIFS BOTTOM TABS -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- GIFS BOTTOM TABS -->
 
 <p>Properties are also divided between Building and Units tabs. The Building tab pertains to all information related to the building itself, including the name, location, amenities, policies, etc. It also hosts a master list of all availability and a calendar view for occupancy.</p>
 
 <!-- FLICKITY BUILDING VIEWS -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- FLICKITY BUILDING VIEWS -->
 
 <p>The Units tab has a sidebar with individual units within that building. It also shows information exclusive to that unit, a list of the furniture within, its availability, timeline and booking history.</p>
 
 <!-- FLICKITY BUILDING VIEWS -->
 <img src="  
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 350px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- FLICKITY BUILDING VIEWS -->
 </div>
 <script type="text/javascript">
