--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <head>
-<title>Arithmatic</title>
+<title>Stayawhile</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
@@ -144,9 +144,9 @@
 
 <!-- FLICKITY INITIAL BRAND -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg" style="max-width: 750px; margin: 0 15px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg" style="max-width: 750px; margin: 0 15px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing.jpg" style="max-width: 750px; margin: 0 15px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing.jpg" style="max-width: 750px;">
 </div>
 <!-- FLICKITY INITIAL BRAND -->
 
@@ -155,9 +155,9 @@
 
 <!-- INSERT BIG HUMAN IMAGES -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/main-new.jpg" style="max-width: 750px; margin: 0 15px;">
-  <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how.png" style="max-width: 750px; margin: 0 15px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/brand.jpg" style="max-width: 750px; margin: 0 15px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/main-new.jpg" style="max-width: 750px;">
+  <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how.png" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/brand.jpg" style="max-width: 750px;">
 </div>
 <!-- INSERT BIG HUMAN IMAGES -->
 
@@ -171,7 +171,7 @@
 
 <!-- DASHBOARDS FLICKITY -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src=" https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 750px; margin: 0 15px;">
+  <img src=" https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 750px;">
 </div>
 <!-- DASHBOARDS FLICKITY -->
 
@@ -185,29 +185,25 @@
 
 <!-- DASHBOARDS FLICKITY -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 750px; margin: 0 15px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 750px;">
 </div>
 <!-- DASHBOARDS FLICKITY -->
 
 <p>The Locations page is arguably the most complex page on the site. This is where users would most likely spend the majority of their time. Since we wanted to encourage users to look at the apartments we offer as a network, units from every city we're established in&mdash;NYC, Boston and Philadelphia&mdash;can be viewed at once from this page.</p>
-<p>In order to show multiple cities within the same apartment view, I coded a 'sticky' interaction where the city map follows the units until the bottom of its container. This map also has custom pins designed to show which apartment is being hovered over.</p>
+<p>In order to show multiple cities within the same apartment view, I coded a 'sticky' interaction where the city map follows the units until the bottom of its container.</p>
 
 <!-- INSERT SCROLLING VIDEO -->
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 <!-- INSERT SCROLLING VIDEO -->
-
-<!-- INSERT MAP PIN IMAGE -->
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
-<!-- INSERT MAP PIN IMAGE -->
 
 <p>I designed a unique set of symbols to represent unique amenities and policies found in the apartment building.</p>
 <!-- INSERT AMENITY ICONS -->
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/icons.png">
 <!-- INSERT AMENITY ICONS -->
-<p>Since we frequently has multiple units within the same building, I designed a nested display where the full cell represents a building with its own metadata and the actual apartment units are nested inside with its corresponding information. The building address, neighborhood, amenities and policies are also 'sticky', following the user scrolling down the page until it reaches the end of its container.</p>
+<p>Since we frequently have multiple units within the same building, I designed a nested display where the full cell represents a building with its own metadata and the actual apartment units are nested inside with its corresponding information. The building address, neighborhood, amenities and policies are also 'sticky', following the user scrolling down the page until it reaches the end of its container.</p>
 
 <!-- INSERT BUILDING CELL -->
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/building-cell.jpg">
 <!-- INSERT BUILDING CELL -->
 
 Since this is a single page with almost thirty apartments, filtering is essential to the user experience. I designed a set of filters for the following parameters:
@@ -219,20 +215,15 @@ Since this is a single page with almost thirty apartments, filtering is essentia
     <li>Policies</li>
   </ul>
 
-<!-- INSERT FILTERS -->
-
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
-<!-- INSERT FILTERS -->
-
 <p>For the most part, these filters are a series of customized checkboxes, while the policies are actually radio buttons. The amenities selection is a series of customized checkboxes, where the icon itself is the checkbox. Policies were built as radio buttons since&mdash;for example&mdash;a filtered unit cannot be both smoking and non-smoking.</p>
 <p>Once your filters were selected, I wanted users to be able to tell for the most part what they had selected without needing to open up the filter again. For the dates and price, a simple text change would suffice. For amenities and policies, I inserted the up to two of the selected icons into the button itself. Any number of selected items larger than two would be replaced by the number representing the amount selected there.</p>
 
 <!-- INSERT SELECTED FILTERS -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.31+PM.png" style="max-width: 750px; margin: 0 15px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.48+PM.png" style="max-width: 750px; margin: 0 15px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.06+PM.png" style="max-width: 750px; margin: 0 15px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.19+PM.png" style="max-width: 750px; margin: 0 15px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.31+PM.png" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.48+PM.png" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.06+PM.png" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.19+PM.png" style="max-width: 750px;">
 </div>
 <!-- INSERT SELECTED FILTERS -->
 
@@ -240,22 +231,22 @@ Since this is a single page with almost thirty apartments, filtering is essentia
 
 <!-- FLICKITY EMPTY ERROR STATES -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/empty-state.png" style="max-width: 750px; margin: 0 15px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/error-state.png" style="max-width: 750px; margin: 0 15px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/empty-state.png" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/error-state.png" style="max-width: 750px;">
 </div>
 <!-- FLICKITY EMPTY ERROR STATES -->
 
 <p>I also designed a view for apartments under renovation or furnishing that is available to be booked.</p>
 
 <!-- TRANSFORMATION IN PROGRESS -->
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/transformation.jpg">
 <!-- TRANSFORMATION IN PROGRESS -->
 
 <p>Once you click on a unit, you're taken to its unit page where you can get a full size gallery, more information on the amenities and policies in-place and a booking block, where users can see when the unit is available and book based on that availability.</p>
 
 <!-- FLICKITY LISTING -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 750px; margin: 0 15px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 750px;">
 </div>
 <!-- FLICKITY LISTING -->
 </div>
