--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -144,9 +144,9 @@
 
 <!-- FLICKITY INITIAL BRAND -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg" style="max-width: 750px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg" style="max-width: 750px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing.jpg" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing.jpg">
 </div>
 <!-- FLICKITY INITIAL BRAND -->
 
@@ -155,9 +155,9 @@
 
 <!-- INSERT BIG HUMAN IMAGES -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/main-new.jpg" style="max-width: 750px;">
-  <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how.png" style="max-width: 750px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/brand.jpg" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/main-new.jpg">
+  <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/brand.jpg">
 </div>
 <!-- INSERT BIG HUMAN IMAGES -->
 
@@ -171,7 +171,7 @@
 
 <!-- DASHBOARDS FLICKITY -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src=" https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 750px;">
+  <img src=" https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 </div>
 <!-- DASHBOARDS FLICKITY -->
 
@@ -185,7 +185,7 @@
 
 <!-- DASHBOARDS FLICKITY -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 </div>
 <!-- DASHBOARDS FLICKITY -->
 
@@ -220,10 +220,10 @@ Since this is a single page with almost thirty apartments, filtering is essentia
 
 <!-- INSERT SELECTED FILTERS -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.31+PM.png" style="max-width: 750px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.48+PM.png" style="max-width: 750px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.06+PM.png" style="max-width: 750px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.19+PM.png" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.31+PM.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.01.48+PM.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.06+PM.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/Screen+Shot+2017-12-13+at+8.02.19+PM.png">
 </div>
 <!-- INSERT SELECTED FILTERS -->
 
@@ -231,8 +231,8 @@ Since this is a single page with almost thirty apartments, filtering is essentia
 
 <!-- FLICKITY EMPTY ERROR STATES -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/empty-state.png" style="max-width: 750px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/error-state.png" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/empty-state.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/error-state.png">
 </div>
 <!-- FLICKITY EMPTY ERROR STATES -->
 
@@ -246,7 +246,7 @@ Since this is a single page with almost thirty apartments, filtering is essentia
 
 <!-- FLICKITY LISTING -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png" style="max-width: 750px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
 </div>
 <!-- FLICKITY LISTING -->
 </div>
