--- a/projects/stayawhile/index.html
+++ b/projects/stayawhile/index.html
@@ -146,7 +146,7 @@
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/landing.jpg">
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/how-it-works.jpg">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing.jpg">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing-old.jpg">
 </div>
 <!-- FLICKITY INITIAL BRAND -->
 
@@ -170,9 +170,7 @@
   </ul>
 
 <!-- DASHBOARDS FLICKITY -->
-<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src=" https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
-</div>
+
 <!-- DASHBOARDS FLICKITY -->
 
 <p>The dashboard for full members also comes with multiple states:</p>
@@ -185,7 +183,10 @@
 
 <!-- DASHBOARDS FLICKITY -->
 <div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg1.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg2.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg3.png">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/bg4.png">
 </div>
 <!-- DASHBOARDS FLICKITY -->
 
@@ -193,7 +194,7 @@
 <p>In order to show multiple cities within the same apartment view, I coded a 'sticky' interaction where the city map follows the units until the bottom of its container.</p>
 
 <!-- INSERT SCROLLING VIDEO -->
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/locations.gif">
 <!-- INSERT SCROLLING VIDEO -->
 
 <p>I designed a unique set of symbols to represent unique amenities and policies found in the apartment building.</p>
@@ -245,9 +246,7 @@ Since this is a single page with almost thirty apartments, filtering is essentia
 <p>Once you click on a unit, you're taken to its unit page where you can get a full size gallery, more information on the amenities and policies in-place and a booking block, where users can see when the unit is available and book based on that availability.</p>
 
 <!-- FLICKITY LISTING -->
-<div data-flickity='{ "wrapAround": true, "percentPosition": false, "imagesLoaded": true, "freeScroll": true, "adaptiveHeight":true }'>
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arithmatic/new-screens/homescreen-unlocked-red.png">
-</div>
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile/listing.jpg">
 <!-- FLICKITY LISTING -->
 </div>
 
