--- a/projects/stayawhile-dash/index.html
+++ b/projects/stayawhile-dash/index.html
@@ -169,6 +169,7 @@
 <p>In setting up a unit, there are multiple roadmaps with different corresponding teams. In Excel, multiple spreadsheets are separated by a fixed set of tabs at the bottom of a document. I borrowed this UI convention for the dashboard due to the team's familiarity with Excel, but Excel's approach lacks the responsiveness we need. My solution to build out a fixed bottom 'dropup' menu.</p>
 <!-- GIFS BOTTOM TABS -->
 <img src="  https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Dec-13-2017+15-14-55.gif">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayawhile-dash/Dec-13-2017+15-16-00.gif">
 <!-- GIFS BOTTOM TABS -->
 
 <p>Properties are also divided between Building and Units tabs. The Building tab pertains to all information related to the building itself, including the name, location, amenities, policies, etc. It also hosts a master list of all availability and a calendar view for occupancy.</p>
