--- a/projects/stayawhile-dash/index.html
+++ b/projects/stayawhile-dash/index.html
@@ -158,9 +158,9 @@
 <!-- RESPONSIVE TABLES GIF -->
 <p>To set up these units, tasks need to be completed. Collaborating with the team, I identified the three core task interactions:</p>
   <ol>
-    <li>Free Entry: The task requires some sort of string to be manually added to the database.</li>
-    <li>File Upload: The task requires the upload of some form of external file, usually a PDF form or document.</li>
-    <li>Mark as Complete: The task requires the user to do something physical in the actual unit, such as moving a couch or calling the landlord, and will only be marked as complete if the task has been done. Likewise, if there's some sort of obstacle preventing the completion of this task, the user can select 'Issue' from a dropdown menu and write what happened in a textbox.</li>
+    <li><strong>Free Entry:</strong> The task requires some sort of string to be manually added to the database.</li>
+    <li><strong>File Upload:</strong> The task requires the upload of some form of external file, usually a PDF form or document.</li>
+    <li><strong>Mark as Complete:</strong> The task requires the user to do something physical in the actual unit, such as moving a couch or calling the landlord, and will only be marked as complete if the task has been done. Likewise, if there's some sort of obstacle preventing the completion of this task, the user can select 'Issue' from a dropdown menu and write what happened in a textbox.</li>
   </ol>
 <p>For the actual process of setting up units, tasks don't need to be completed in some chronological order, but some tasks require another task to be completed. The solution was nested tasking, similar to nested comment threads in platforms like Reddit. Tasks also have a designated person-in-charge, an ETA for completion and a color key noting how critical it is to complete.</p>
 <!-- TASKS IMAGE -->
