--- a/projects/stayabit/index.html
+++ b/projects/stayabit/index.html
@@ -187,7 +187,7 @@
 <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/medium.png">
 <!-- FACES OF CRYPTO -->
 <p>In the end though, we decided to not go forward with launching our token sale. We felt that at that moment, several scammers had soured the overall view of ICO's due to fraud and bad business practices. Several exposed vulnerabilities in the Solidity language would have also delayed our token launch, therefore we felt it was prudent to put the sale on hold to revisit later.</p>
-<img src="">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/screencapture-file-Users-albertogui-Code-StayAwhile-token-build-index-html-1508357823077.jpg">
 </div>
 <script type="text/javascript">
   var clicked = false;
