--- a/projects/stayabit/index.html
+++ b/projects/stayabit/index.html
@@ -154,7 +154,7 @@
 <p>These uses would not just be enormously beneficial to our business, there was potential that this could be the utility token for the entire furnished apartment rental system.</p>
 <p>Naming this token the Stayabit, we went to work. Our CTO worked tirelessly on the smart contracts while I collaborated with the marketing team to define the look of the brand while simultaneously developing and designing our token sale landing page.</p>
 <!-- FLICKITY IMAGES -->
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/stayabit-polygon.png">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/stayabit-polygon.png" style="max-width: 400px;">
 <!-- FLICKITY IMAGES -->
 
 <p>Once the sale goes live, we needed a way for potential buyers to understand what state the sale is in. We were unique in that there'd be discounts depending on how many were sold, where the earlier you buy in the sale the better the discount tier you can potentially be. I designed a scaling bar graph that visually represented these tiers, as well as developed its responsiveness on mobile devices.</p>
@@ -165,8 +165,8 @@
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/empty-hover.png">
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/in-progress.png">
   <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/in-progress-hover.png">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/empty-mobile.png" style="max-width: 350px;">
-  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/in-progress-mobile.png" style="max-width: 350px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/empty-mobile.png" style="max-width: 350px; margin: 0 20px;">
+  <img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/stayabit/in-progress-mobile.png" style="max-width: 350px; margin: 0 20px;">
 </div>
 <!-- FLICKITY LANDING STATES -->
 
