--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
 		// FOR DRIBBBLE
 		var aboutLink = document.createElement('a');
-		aboutLink.href="https://dribbble.com/cryptocomix";
+		aboutLink.href="https://dribbble.com/albertosoft";
 		for(i=1; i<9; i++){
 			var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
 			aboutLink.appendChild(linkDiv);
@@ -475,7 +475,7 @@
 
 		// FOR TWITTER
 		var projectsLink = document.createElement('a');
-		projectsLink.href="http://twitter.com/cryptocomix";
+		projectsLink.href="http://twitter.com/agdelax";
 		for(i=11; i<19; i++){
 			var linkDiv=document.getElementsByTagName('h2')[0].getElementsByClassName("char"+i)[0];
 			projectsLink.appendChild(linkDiv);
