--- a/index.html
+++ b/index.html
@@ -334,26 +334,26 @@
 
 		<div class="flex-container">
 			<div class="case-study-box three-cell">
-				<h4>Case Study</h4>
+				<h4>UI/UX &amp; Front-end Development</h4>
 				<p class="case-study-text"><a class="contentlinks" href="/projects/stayawhile/">Stayawhile</a>&mdash;Design and front-end development for a web application that allowed users to book any of the units in our network of apartments, as well as signing up through a background check.</p>
 			</div>
 			<div class="case-study-box three-cell">
-				<h4>Case Study</h4>
+				<h4>UI/UX &amp; Front-end Development</h4>
 				<p class="case-study-text"><a class="contentlinks" href="/projects/stayawhile-dash/">Stayawhile Internal Dashboard</a>&mdash;An internal CRM to help our team set up new units, contact vendors, manage apartment bookings and maintain customer profiles</p>
 			</div>
 			<div class="case-study-box three-cell">
-				<h4>Case Study</h4>
+				<h4>UI/UX &amp; Front-end Development</h4>
 				<p class="case-study-text"><a class="contentlinks" href="/projects/stayabit/">Stayabit Token Sale</a>&mdash;Design, development and branding for the ICO of a utility token for the furnished apartment rental industry, built on the Ethereum blockchain.</p>
 			</div>
 		</div>
 
 		<div class="flex-container">
 			<div class="case-study-box two-cell">
-				<h4>Case Study</h4>
+				<h4>UI/UX &amp; App Design</h4>
 				<p class="case-study-text"><a class="contentlinks" href="/projects/arithmatic/">Arithmatic</a>&mdash;An educational mobile game for iPhone, players must solve arithmetic questions as quickly as possible and compete in leaderboards.</p>
 			</div>
 			<div class="case-study-box two-cell">
-				<h4>Case Study</h4>
+				<h4>App Design, Illustration &amp; Animation</h4>
 				<p class="case-study-text"><a href="/projects/creepypasta/" class="contentlinks">Creepypasta Stickers</a>&mdash;A horror-themed sticker app for iOS based on the best creepy stories found online, with over 20 animated stickers available for free.</p>
 			</div>
 		</div>
