--- a/projects/creepypasta/index.html
+++ b/projects/creepypasta/index.html
@@ -31,10 +31,6 @@
       line-height: 1.7em;
       top: 6em;
     }
-    img{
-      width: 100%;
-    }
-
     a{
     text-decoration: none;
     color: #212121;
@@ -107,7 +103,7 @@
   }
   .creepypicture{
     padding: 10px;
-    max-width: 200px;
+    width: calc(50% - 20px);
   }
 
   @media (max-width: 700px){
