--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 		animation-duration: 60s;
 		animation-iteration-count: infinite;
 		animation-timing-function: linear;
-		height: 60vmin !important;
-		width: 60vmin !important;
+		height: 65vmin !important;
+		width: 65vmin !important;
 		position: absolute !important;
 		margin: 0;
 	}
 	#links-flex{
-		height: 60vmin;
-		width: 60vmin;
+		height: 65vmin;
+		width: 65vmin;
 		position: absolute;
 		display: flex;
 		align-items: center;
@@ -251,6 +251,14 @@
 	}
 
 	@media (max-width: 750px){
+		#links{
+			height: 60vmin !important;
+			width: 60vmin !important;
+		}
+		#links-flex{
+			height: 60vmin;
+			width: 60vmin;
+		}
 		.flex-container{
 			display: block;
 		}
