--- a/index.html
+++ b/index.html
@@ -251,6 +251,9 @@
 	}
 
 	@media (max-width: 750px){
+		#name{
+			font-size: 10.5vmin;
+		}
 		#links{
 			height: 60vmin !important;
 			width: 60vmin !important;
