--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
 		align-items: center;
 		-webkit-align-items: center;
 		padding: 0;
-		position: absolute;
-		width: 100%;
+		/*position: absolute;*/
+		/*width: 100%;*/
 		height: 100%;
 		overflow-x: hidden;
 	}
 	#content {
     position:relative; 
-    top:105%; 
+    /*top:105%; */
     max-width: 99%;
     margin: auto;
     font-size: 1.5em;
