--- a/index.html
+++ b/index.html
@@ -50,6 +50,36 @@
 	#name{
 		font-size: 10.5vmin;
 		font-weight: 500;
+		/*-webkit-animation-name: turn;
+		-webkit-animation-direction: reverse;
+		-webkit-animation-duration: 30s;
+		-webkit-animation-iteration-count: infinite;
+		-webkit-animation-timing-function: linear;
+		animation-name: turn;
+		animation-direction: reverse;
+		animation-duration: 30s;
+		animation-iteration-count: infinite;
+		animation-timing-function: linear;
+		-o-animation-name: turn;
+		-o-animation-direction: reverse;
+		-o-animation-duration: 30s;
+		-o-animation-iteration-count: infinite;
+		-o-animation-timing-function: linear;*/
+		
+		/*height: 90vmin !important;
+		width: 90vmin !important;
+		position: absolute !important;*/
+		margin: 0;
+	}
+	#name-flex{
+		height: 90vmin;
+		width: 90vmin;
+		position: absolute;
+		display: flex;
+		justify-content: center;
+		align-content: center;
+		align-items: center;
+
 		-webkit-animation-name: turn;
 		-webkit-animation-direction: reverse;
 		-webkit-animation-duration: 30s;
@@ -65,36 +95,24 @@
 		-o-animation-duration: 30s;
 		-o-animation-iteration-count: infinite;
 		-o-animation-timing-function: linear;
-		height: 90vmin !important;
-		width: 90vmin !important;
-		position: absolute !important;
-		margin: 0;
-	}
-	#name-flex{
-		height: 90vmin;
-		width: 90vmin;
-		position: absolute;
-		display: flex;
-		justify-content: center;
-		align-content: center;
-		align-items: center;
 	}
 
 	#links{
 		color: #212121;
 		font-size: 4.5vmin;
 		font-weight: 400;
-		-webkit-animation-name: turn;
+		/*-webkit-animation-name: turn;
 		-webkit-animation-duration: 60s;
 		-webkit-animation-iteration-count: infinite;
 		-webkit-animation-timing-function: linear;
 		animation-name: turn;
 		animation-duration: 60s;
 		animation-iteration-count: infinite;
-		animation-timing-function: linear;
-		height: 60vmin !important;
+		animation-timing-function: linear;*/
+
+		/*height: 60vmin !important;
 		width: 60vmin !important;
-		position: absolute !important;
+		position: absolute !important;*/
 		margin: 0;
 	}
 	#links-flex{
@@ -104,6 +122,15 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+
+		-webkit-animation-name: turn;
+		-webkit-animation-duration: 60s;
+		-webkit-animation-iteration-count: infinite;
+		-webkit-animation-timing-function: linear;
+		animation-name: turn;
+		animation-duration: 60s;
+		animation-iteration-count: infinite;
+		animation-timing-function: linear;
 	}
 
 	#linksdown{
