--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 		-o-animation-iteration-count: infinite;
 		-o-animation-timing-function: linear;*/
 		
-		/*height: 90vmin !important;
-		width: 90vmin !important;
+		height: 90vmin !important;
+		/*width: 90vmin !important;
 		position: absolute !important;*/
 		margin: 0;
 	}
@@ -110,8 +110,8 @@
 		animation-iteration-count: infinite;
 		animation-timing-function: linear;*/
 
-		/*height: 60vmin !important;
-		width: 60vmin !important;
+		height: 60vmin !important;
+		/*width: 60vmin !important;
 		position: absolute !important;*/
 		margin: 0;
 	}
