--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 	}
 
 	@media (max-width: 750px){
-		#links{
+		/*#links{
 			height: 60vmin !important;
 			width: 60vmin !important;
 			font-size: 4.7vmin;
@@ -286,7 +286,7 @@
 		#links-flex{
 			height: 60vmin;
 			width: 60vmin;
-		}
+		}*/
 		.flex-container{
 			display: block;
 		}
