--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@
 
 		$('#name').circleType();
 		$('#links').circleType();
-		jQuery("#name").fitText();
-		jQuery("#links").fitText();
+		$("#name").fitText();
+		$("#links").fitText();
 
 
 		$('#linksdown').hide();
