--- a/index.html
+++ b/index.html
@@ -496,8 +496,8 @@
 
 		$('#name').circleType();
 		$('#links').circleType();
-		$("#name").fitText();
-		$("#links").fitText();
+		$("#name").fitText(0.2);
+		$("#links").fitText(0.2);
 
 
 		$('#linksdown').hide();
