--- a/index.html
+++ b/index.html
@@ -494,12 +494,12 @@
   		//document.getElementById('links').style.fontSize = "4.3vmin";
 		// }
 
-		$('#name').circleType();
+		$('#name').circleType({fluid:true});
 		$("#name").fitText(1.8);
-		
+
 		$('#links').circleType();
 		$("#links").fitText(3);
-		
+
 
 		$('#linksdown').hide();
 		$('#navbar').hide();
