--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 		-o-animation-timing-function: linear;*/
 
 		/*height: 90vmin !important;*/
-		/*width: 90vmin !important;
-		position: absolute !important;*/
+		width: 90vmin;
+		/*position: absolute !important;*/
 		margin: 0;
 	}
 	#name-flex{
@@ -112,8 +112,8 @@
 		animation-timing-function: linear;*/
 
 		/*height: 60vmin !important;*/
-		/*width: 60vmin !important;
-		position: absolute !important;*/
+		width: 60vmin;
+		/*position: absolute !important;*/
 		margin: 0;
 	}
 	#links-flex{
@@ -494,7 +494,7 @@
   		//document.getElementById('links').style.fontSize = "4.3vmin";
 		// }
 
-		$('#name').circleType({fluid:true});
+		$('#name').circleType();
 		$("#name").fitText(1.8);
 
 		$('#links').circleType();
