--- a/index.html
+++ b/index.html
@@ -495,10 +495,10 @@
 		// }
 
 		$('#name').circleType();
-		$("#name").fitText(1.8);
+		$("#name").fitText();
 
 		$('#links').circleType();
-		$("#links").fitText(3);
+		$("#links").fitText();
 
 
 		$('#linksdown').hide();
