--- a/index.html
+++ b/index.html
@@ -495,10 +495,10 @@
 		// }
 
 		$('#name').circleType();
-		$("#name").fitText();
+		$("#name").fitText(0.5);
 
 		$('#links').circleType();
-		$("#links").fitText();
+		$("#links").fitText(1.2);
 
 
 		$('#linksdown').hide();
