--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		-o-animation-iteration-count: infinite;
 		-o-animation-timing-function: linear;*/
 
-		/*height: 90vmin !important;*/
+		height: 90vmin !important;
 		width: 90vmin;
 		/*position: absolute !important;*/
 		margin: 0;
@@ -111,7 +111,7 @@
 		animation-iteration-count: infinite;
 		animation-timing-function: linear;*/
 
-		/*height: 60vmin !important;*/
+		height: 60vmin !important;
 		width: 60vmin;
 		/*position: absolute !important;*/
 		margin: 0;
