--- a/index.html
+++ b/index.html
@@ -494,11 +494,15 @@
   		//document.getElementById('links').style.fontSize = "4.3vmin";
 		// }
 
+		if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+		 // some code..
+		}
+
 		$('#name').circleType();
 		$("#name").fitText(0.87);
 
 		$('#links').circleType();
-		$("#links").fitText(1.3);
+		$("#links").fitText(1.4);
 
 
 		$('#linksdown').hide();
