--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 		-o-animation-iteration-count: infinite;
 		-o-animation-timing-function: linear;*/
 
-		height: 91vmin !important;
-		width: 91vmin;
+		/*height: 91vmin !important;
+		width: 91vmin;*/
 		/*position: absolute !important;*/
 		margin: 0;
 	}
@@ -111,8 +111,8 @@
 		animation-iteration-count: infinite;
 		animation-timing-function: linear;*/
 
-		height: 61vmin !important;
-		width: 61vmin;
+		/*height: 61vmin !important;
+		width: 61vmin;*/
 		/*position: absolute !important;*/
 		margin: 0;
 	}
@@ -499,10 +499,10 @@
 		}
 
 		$('#name').circleType();
-		$("#name").fitText(0.87);
+		// $("#name").fitText(0.87);
 
 		$('#links').circleType();
-		$("#links").fitText(1.4);
+		// $("#links").fitText(1.4);
 
 
 		$('#linksdown').hide();
