--- a/index.html
+++ b/index.html
@@ -51,36 +51,6 @@
 	#name{
 		font-size: 10.5vmin;
 		font-weight: 500;
-		/*-webkit-animation-name: turn;
-		-webkit-animation-direction: reverse;
-		-webkit-animation-duration: 30s;
-		-webkit-animation-iteration-count: infinite;
-		-webkit-animation-timing-function: linear;
-		animation-name: turn;
-		animation-direction: reverse;
-		animation-duration: 30s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
-		-o-animation-name: turn;
-		-o-animation-direction: reverse;
-		-o-animation-duration: 30s;
-		-o-animation-iteration-count: infinite;
-		-o-animation-timing-function: linear;*/
-
-		/*height: 91vmin !important;
-		width: 91vmin;*/
-		/*position: absolute !important;*/
-		margin: 0;
-	}
-	#name-flex{
-		height: 91vmin;
-		width: 91vmin;
-		position: absolute;
-		display: flex;
-		justify-content: center;
-		align-content: center;
-		align-items: center;
-
 		-webkit-animation-name: turn;
 		-webkit-animation-direction: reverse;
 		-webkit-animation-duration: 30s;
@@ -96,20 +66,35 @@
 		-o-animation-duration: 30s;
 		-o-animation-iteration-count: infinite;
 		-o-animation-timing-function: linear;
+
+		/*height: 91vmin !important;
+		width: 91vmin;*/
+		/*position: absolute !important;*/
+		margin: 0;
+	}
+	#name-flex{
+		height: 91vmin;
+		width: 91vmin;
+		position: absolute;
+		display: flex;
+		justify-content: center;
+		align-content: center;
+		align-items: center;
+		overflow-x: hidden;
 	}
 
 	#links{
 		color: #212121;
 		font-size: 4.5vmin;
 		font-weight: 400;
-		/*-webkit-animation-name: turn;
+		-webkit-animation-name: turn;
 		-webkit-animation-duration: 60s;
 		-webkit-animation-iteration-count: infinite;
 		-webkit-animation-timing-function: linear;
 		animation-name: turn;
 		animation-duration: 60s;
 		animation-iteration-count: infinite;
-		animation-timing-function: linear;*/
+		animation-timing-function: linear;
 
 		/*height: 61vmin !important;
 		width: 61vmin;*/
@@ -123,15 +108,7 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
-
-		-webkit-animation-name: turn;
-		-webkit-animation-duration: 60s;
-		-webkit-animation-iteration-count: infinite;
-		-webkit-animation-timing-function: linear;
-		animation-name: turn;
-		animation-duration: 60s;
-		animation-iteration-count: infinite;
-		animation-timing-function: linear;
+		overflow-x: hidden;
 	}
 
 	#linksdown{
