--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
 		margin: 0;
 	}
 	#links-flex{
-		height: 61vmin;
-		width: 61vmin;
+		height: 71vmin;
+		width: 71vmin;
 		position: absolute;
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		overflow-x: hidden;
 	}
 
 	#linksdown{
