--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		justify-content: center;
 		align-content: center;
 		align-items: center;
-		overflow-x: hidden;
+		overflow: hidden;
 	}
 
 	#links{
