--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
 	#first-paragraph{
 		font-size: 1.6em; 
 		line-height: 1.5em;
-		margin-bottom: 40px;
+		padding: 10px;
+		margin-bottom: 30px;
 	}
 
 	.case-study-box{
