--- a/index.html
+++ b/index.html
@@ -535,6 +535,9 @@
 		};
 		$(linkedinLink).insertAfter("h2 .char49");
 
+		$(window).resize(function(){
+			l();
+		});
 	</script>
 </body>
 </html>
